tests/invalid/invalid_symbol.lang
func main() {
    var hello: i32 = a;
}
